installed chai-almost and updated modules to fix vulnerabilities

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,42 @@ Classes/Adblock-Plus.zip
 Classes/Tests/try.js
 Classes/node_modules/testMochaThere.js
 Classes/.DS_Store
+Classes/Tests/screenshots/calculator-t022.png
+/Classes/Tests/Calculator/Screenshots
+Classes/Tests/screenshots/calculator-t022.png
+Classes/Tests/screenshots/calculator-t017.png
+Classes/Tests/screenshots/calculator-t015.png
+Classes/Tests/screenshots/calculator-t014.png
+Classes/Tests/screenshots/calculator-t013b.png
+Classes/Tests/screenshots/calculator-t012.png
+Classes/Tests/screenshots/calculator-t011.png
+Classes/Tests/screenshots/calculator-t010b.png
+Classes/Tests/screenshots/calculator-t009.png
+Classes/Tests/screenshots/calculator-t008b.png
+Classes/Tests/screenshots/calculator-t007b.png
+Classes/Tests/screenshots/calculator-t006.png
+Classes/Tests/screenshots/calculator-t005b.png
+Classes/Tests/screenshots/calculator-t004.png
+Classes/Tests/screenshots/calculator-t003.png
+Classes/Tests/screenshots/calculator-t002.png
+Classes/Tests/screenshots/calculator-t001.png
+Classes/Tests/screenshots/calculator-22.png
+Classes/Tests/screenshots/calculator-t001.png
+Classes/Tests/screenshots/calculator-t002.png
+Classes/Tests/screenshots/calculator-t003.png
+Classes/Tests/screenshots/calculator-t004.png
+Classes/Tests/screenshots/calculator-t005b.png
+Classes/Tests/screenshots/calculator-t006.png
+Classes/Tests/screenshots/calculator-t007b.png
+Classes/Tests/screenshots/calculator-t008b.png
+Classes/Tests/screenshots/calculator-t009.png
+Classes/Tests/screenshots/calculator-t010b.png
+Classes/Tests/screenshots/calculator-t011.png
+Classes/Tests/screenshots/calculator-t012.png
+Classes/Tests/screenshots/calculator-t013b.png
+Classes/Tests/screenshots/calculator-t014.png
+Classes/Tests/screenshots/calculator-t015.png
+Classes/Tests/screenshots/calculator-t017.png
+Classes/Tests/screenshots/calculator-t022.png
+Classes/.DS_Store
+.DS_Store
